--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>WEB STUDIO</title>
+    <title>homework-2</title>
   </head>
   <body>
     <header>
@@ -9,7 +9,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
           <li><a href="#contacts">Contacts</a></li>
         </ul>
       </nav>
@@ -63,14 +63,14 @@
         <ul>
           <li>
             <img
-              src="./images/img-computer.jpg"
+              src="./images/hw1/img-computer.jpg"
               alt="destop application"
               width="360"
             />
           </li>
           <li>
             <img
-              src="./images/img-2mobile-phone.jpg"
+              src="./images/hw1/img-2mobile-phone.jpg"
               alt="app on mobile phone"
               width="360"
               height="300"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3laptop-mobile-phone.jpg"
+              src="./images/hw1/img-3laptop-mobile-phone.jpg"
               alt="web site adjustet to computer and mobile phone"
               width="360"
               height="300"
@@ -91,7 +91,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-Mark.jpg"
+              src="./images/hw1/img-Mark.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
             />
@@ -100,7 +100,7 @@
           </li>
           <li>
             <img
-              src="./images/img-Tom.jpg"
+              src="./images/hw1/img-Tom.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
             />
@@ -109,7 +109,7 @@
           </li>
           <li>
             <img
-              src="./images/img-Camila.jpg"
+              src="./images/hw1/img-Camila.jpg"
               alt="Camila Garcia Marketing"
               width="264"
             />
@@ -118,7 +118,7 @@
           </li>
           <li>
             <img
-              src="./images/img-Daniel.jpg"
+              src="./images/hw1/img-Daniel.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
             />
