--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
   <head>
     <title>homework-2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
