--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,18 @@
 <html lang="en">
   <head>
     <title>homework-2-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -20,7 +32,113 @@
         </ul>
       </address>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <ul>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+      <ul>
+        <li>
+          <img
+            src="./images/hw2/imgbanking.jpg"
+            alt="purple banking App"
+            width="360"
+            height="300"
+          />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgcashless.jpg"
+            alt="smartphone on cashless Payment"
+            width="360"
+            height="300"
+          />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgmeditation.jpg"
+            alt="meditation app on laptop and smartphone"
+            width="360"
+            height="300"
+          />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgtaxi.jpg"
+            alt="smartphone in the taxi car"
+            width="360"
+            height="300"
+          />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgscreen-illustrations.jpg"
+            alt="smartphone and screen illustrations"
+            width="360"
+            height="300"
+          />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgonline-courses.jpg"
+            alt="women talking on a video conference"
+            width="360"
+            height="300"
+          />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imginstagram.jpg"
+            alt="instagram stories"
+            width="360"
+            height="300"
+          />
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgorganic-food.jpg"
+            alt="women carries mesh of fresh fruits and vegetables"
+            width="360"
+            height="300"
+          />
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+        </li>
+        <li>
+          <img
+            src="./images/hw2/imgfres-coffee.jpg"
+            alt="a man makes latte art"
+            width="360"
+            height="300"
+          />
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
