add class body, button, name

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="name" href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
@@ -35,7 +35,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2>Our Studio</h2>
