--- a/portfolio.html
+++ b/portfolio.html
@@ -15,10 +15,10 @@
     </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="name" href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/goit-markup-hw-02/index.html">Studio</a></li>
           <li><a href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
@@ -34,11 +34,11 @@
     </header>
     <main>
       <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li><button class="button" type="button">All</button></li>
+        <li><button class="button" type="button">Web Site</button></li>
+        <li><button class="button" type="button">App</button></li>
+        <li><button class="button" type="button">Design</button></li>
+        <li><button class="button" type="button">Marketing</button></li>
       </ul>
       <ul>
         <li>
