add css in head

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
       <nav>
         <a class="name" href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a class="navigation" href="#studio">Studio</a></li>
+          <li>
+            <a class="navigation" href="/goit-markup-hw-02/portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li><a class="navigation" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
