--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,17 @@
       <nav>
         <a class="name" href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="/goit-markup-hw-02/index.html">Studio</a></li>
-          <li><a href="/goit-markup-hw-02/portfolio.html">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li>
+            <a class="navigation" href="/goit-markup-hw-02/index.html"
+              >Studio</a
+            >
+          </li>
+          <li>
+            <a class="navigation" href="/goit-markup-hw-02/portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li><a class="navigation" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
