--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
           <li><a class="navigation" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -42,7 +42,7 @@
     </header>
     <main>
       <ul>
-        <li><button class="button" type="button">All</button></li>
+        <li><button class="button-all" type="button">All</button></li>
         <li><button class="button" type="button">Web Site</button></li>
         <li><button class="button" type="button">App</button></li>
         <li><button class="button" type="button">Design</button></li>
