css change main and footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="body">
     <header>
       <nav>
-        <a class="name" href="./index.html">WebStudio</a>
+        <a class="title-website" href="./index.html">WebStudio</a>
         <ul>
           <li><a class="navigation" href="#studio">Studio</a></li>
           <li>
@@ -39,35 +39,35 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <button class="button-order" type="button">Order Service</button>
       </section>
       <section>
         <h2>Our Studio</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -111,8 +111,8 @@
               alt="Mark Guerrero Product Designer"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="job-name">Product Designer</p>
           </li>
           <li>
             <img
@@ -120,8 +120,8 @@
               alt="Tom Ford Frontend Developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="job-name">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -129,8 +129,8 @@
               alt="Camila Garcia Marketing"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="job-name">Marketing</p>
           </li>
           <li>
             <img
@@ -138,8 +138,8 @@
               alt="Daniel Wilson UI Designer"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="job-name">UI Designer</p>
           </li>
         </ul>
       </section>
