--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body class="body">
     <header>
       <nav>
-        <a class="name" href="./index.html">WebStudio</a>
+        <a class="title-website" href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a class="navigation" href="/goit-markup-hw-02/index.html"
@@ -56,7 +56,7 @@
             width="360"
             height="300"
           />
-          <h3>Banking App Interface Concept</h3>
+          <h3 class="img-description">Banking App Interface Concept</h3>
           <p>App</p>
         </li>
         <li>
@@ -66,7 +66,7 @@
             width="360"
             height="300"
           />
-          <h3>Cashless Payment</h3>
+          <h3 class="img-description">Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
@@ -76,7 +76,7 @@
             width="360"
             height="300"
           />
-          <h3>Meditation App</h3>
+          <h3 class="img-description">Meditation App</h3>
           <p>App</p>
         </li>
         <li>
@@ -86,7 +86,7 @@
             width="360"
             height="300"
           />
-          <h3>Taxi Service</h3>
+          <h3 class="img-description">Taxi Service</h3>
           <p>Marketing</p>
         </li>
         <li>
@@ -96,7 +96,7 @@
             width="360"
             height="300"
           />
-          <h3>Screen Illustrations</h3>
+          <h3 class="img-description">Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
@@ -106,7 +106,7 @@
             width="360"
             height="300"
           />
-          <h3>Online Courses</h3>
+          <h3 class="img-description">Online Courses</h3>
           <p>Marketing</p>
         </li>
         <li>
@@ -116,7 +116,7 @@
             width="360"
             height="300"
           />
-          <h3>Instagram Stories Concept</h3>
+          <h3 class="img-description">Instagram Stories Concept</h3>
           <p>Design</p>
         </li>
         <li>
@@ -126,7 +126,7 @@
             width="360"
             height="300"
           />
-          <h3>Organic Food</h3>
+          <h3 class="img-description">Organic Food</h3>
           <p>Web Site</p>
         </li>
         <li>
@@ -136,7 +136,7 @@
             width="360"
             height="300"
           />
-          <h3>Fresh Coffee</h3>
+          <h3 class="img-description">Fresh Coffee</h3>
           <p>Web Site</p>
         </li>
       </ul>
