--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="body">
     <header>
       <nav>
-        <a class="title-website" href="./index.html">WebStudio</a>
+        <a class="title-website" href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li><a class="navigation" href="#studio">Studio</a></li>
           <li>
@@ -145,7 +145,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
