--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body class="body">
     <header>
       <nav>
-        <a class="title-website" href="./index.html">WebStudio</a>
+        <a class="title-website" href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li>
             <a class="navigation" href="/goit-markup-hw-02/index.html"
@@ -142,7 +142,7 @@
       </ul>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
