--- a/index.html
+++ b/index.html
@@ -18,32 +18,38 @@
   <body class="body">
     <header>
       <nav>
-        <a class="title-website" href="./index.html"><span>Web</span>Studio</a>
-        <ul>
-          <li><a class="navigation" href="#studio">Studio</a></li>
+        <a class="logo-header" href="./index.html"
+          >Web<span class="logo-header-st">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li>
-            <a class="navigation" href="/goit-markup-hw-02/portfolio.html"
-              >Portfolio</a
-            >
+            <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li><a class="navigation" href="#contacts">Contacts</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address>
+        <ul class="list">
+          <li>
+            <a class="contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="first-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="button-order" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our Studio</h2>
-        <ul>
+        <h2 class="section-title">Our Studio</h2>
+        <ul class="list">
           <li>
             <h3 class="title">Strategy</h3>
             <p class="text">
@@ -75,8 +81,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/hw1/img-computer.jpg"
@@ -102,10 +108,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="our-team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="employees">
             <img
               src="./images/hw1/img-Mark.jpg"
               alt="Mark Guerrero Product Designer"
@@ -114,7 +120,7 @@
             <h3 class="name">Mark Guerrero</h3>
             <p class="job-name">Product Designer</p>
           </li>
-          <li>
+          <li class="employees">
             <img
               src="./images/hw1/img-Tom.jpg"
               alt="Tom Ford Frontend Developer"
@@ -123,7 +129,7 @@
             <h3 class="name">Tom Ford</h3>
             <p class="job-name">Frontend Developer</p>
           </li>
-          <li>
+          <li class="employees">
             <img
               src="./images/hw1/img-Camila.jpg"
               alt="Camila Garcia Marketing"
@@ -132,7 +138,7 @@
             <h3 class="name">Camila Garcia</h3>
             <p class="job-name">Marketing</p>
           </li>
-          <li>
+          <li class="employees">
             <img
               src="./images/hw1/img-Daniel.jpg"
               alt="Daniel Wilson UI Designer"
@@ -144,9 +150,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-footer-st">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
