--- a/portfolio.html
+++ b/portfolio.html
@@ -18,132 +18,139 @@
   <body class="body">
     <header>
       <nav>
-        <a class="title-website" href="./index.html"><span>Web</span>Studio</a>
-        <ul>
+        <a class="logo-header" href="./index.html"
+          >Web<span class="logo-header-st">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li>
-            <a class="navigation" href="/goit-markup-hw-02/index.html"
-              >Studio</a
-            >
+            <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a class="navigation" href="/goit-markup-hw-02/portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="navigation" href="#contacts">Contacts</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address>
+        <ul class="list">
+          <li>
+            <a class="contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <ul>
-        <li><button class="button-all" type="button">All</button></li>
-        <li><button class="button" type="button">Web Site</button></li>
-        <li><button class="button" type="button">App</button></li>
-        <li><button class="button" type="button">Design</button></li>
-        <li><button class="button" type="button">Marketing</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img
-            src="./images/hw2/imgbanking.jpg"
-            alt="purple banking App"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgcashless.jpg"
-            alt="smartphone on cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgmeditation.jpg"
-            alt="meditation app on laptop and smartphone"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgtaxi.jpg"
-            alt="smartphone in the taxi car"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgscreen-illustrations.jpg"
-            alt="smartphone and screen illustrations"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgonline-courses.jpg"
-            alt="women talking on a video conference"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imginstagram.jpg"
-            alt="instagram stories"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgorganic-food.jpg"
-            alt="women carries mesh of fresh fruits and vegetables"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/hw2/imgfres-coffee.jpg"
-            alt="a man makes latte art"
-            width="360"
-            height="300"
-          />
-          <h3 class="img-description">Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1>menu</h1>
+        <ul class="list">
+          <li><button class="button" type="button">All</button></li>
+          <li><button class="button" type="button">Web Site</button></li>
+          <li><button class="button" type="button">App</button></li>
+          <li><button class="button" type="button">Design</button></li>
+          <li><button class="button" type="button">Marketing</button></li>
+        </ul>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/hw2/imgbanking.jpg"
+              alt="purple banking App"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Banking App Interface Concept</h2>
+            <p class="category">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgcashless.jpg"
+              alt="smartphone on cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Cashless Payment</h2>
+            <p class="category">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgmeditation.jpg"
+              alt="meditation app on laptop and smartphone"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Meditation App</h2>
+            <p class="category">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgtaxi.jpg"
+              alt="smartphone in the taxi car"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Taxi Service</h2>
+            <p class="category">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgscreen-illustrations.jpg"
+              alt="smartphone and screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Screen Illustrations</h2>
+            <p class="category">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgonline-courses.jpg"
+              alt="women talking on a video conference"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Online Courses</h2>
+            <p class="category">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imginstagram.jpg"
+              alt="instagram stories"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Instagram Stories Concept</h2>
+            <p class="category">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgorganic-food.jpg"
+              alt="women carries mesh of fresh fruits and vegetables"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Organic Food</h2>
+            <p class="category">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/hw2/imgfres-coffee.jpg"
+              alt="a man makes latte art"
+              width="360"
+              height="300"
+            />
+            <h2 class="img-description">Fresh Coffee</h2>
+            <p class="category">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-footer-st">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
