--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a class="contact" href="mailto:info@devstudio.com"
