--- a/portfolio.html
+++ b/portfolio.html
@@ -54,12 +54,14 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./images/hw2/imgbanking.jpg"
-              alt="purple banking App"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="./images/hw2/imgbanking.jpg">
+              <img
+                src="./images/hw2/imgbanking.jpg"
+                alt="purple banking App"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="img-description">Banking App Interface Concept</h2>
             <p class="category">App</p>
           </li>
