--- a/portfolio.html
+++ b/portfolio.html
@@ -60,48 +60,51 @@
                 alt="purple banking App"
                 width="360"
                 height="300"
-              />
-            </a>
+            /></a>
             <h2 class="img-description">Banking App Interface Concept</h2>
             <p class="category">App</p>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgcashless.jpg"
-              alt="smartphone on cashless Payment"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="./images/hw2/imgcashless.jpg">
+              <img
+                src="./images/hw2/imgcashless.jpg"
+                alt="smartphone on cashless Payment"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="img-description">Cashless Payment</h2>
             <p class="category">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgmeditation.jpg"
-              alt="meditation app on laptop and smartphone"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="./images/hw2/imgmeditation.jpg">
+              <img
+                src="./images/hw2/imgmeditation.jpg"
+                alt="meditation app on laptop and smartphone"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="img-description">Meditation App</h2>
             <p class="category">App</p>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgtaxi.jpg"
-              alt="smartphone in the taxi car"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="./images/hw2/imgtaxi.jpg">
+              <img
+                src="./images/hw2/imgtaxi.jpg"
+                alt="smartphone in the taxi car"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="img-description">Taxi Service</h2>
             <p class="category">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgscreen-illustrations.jpg"
-              alt="smartphone and screen illustrations"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="./images/hw2/imgscreen-illustrations.jpg">
+              <img
+                src="./images/hw2/imgscreen-illustrations.jpg"
+                alt="smartphone and screen illustrations"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="img-description">Screen Illustrations</h2>
             <p class="category">Design</p>
           </li>
