--- a/portfolio.html
+++ b/portfolio.html
@@ -60,9 +60,10 @@
                 alt="purple banking App"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="img-description">Banking App Interface Concept</h2>
-            <p class="category">App</p>
+              />
+              <h2 class="img-description">Banking App Interface Concept</h2>
+              <p class="category">App</p>
+            </a>
           </li>
           <li>
             <a class="link" href="./images/hw2/imgcashless.jpg">
@@ -71,9 +72,10 @@
                 alt="smartphone on cashless Payment"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="img-description">Cashless Payment</h2>
-            <p class="category">Marketing</p>
+              />
+              <h2 class="img-description">Cashless Payment</h2>
+              <p class="category">Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href="./images/hw2/imgmeditation.jpg">
@@ -82,9 +84,10 @@
                 alt="meditation app on laptop and smartphone"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="img-description">Meditation App</h2>
-            <p class="category">App</p>
+              />
+              <h2 class="img-description">Meditation App</h2>
+              <p class="category">App</p>
+            </a>
           </li>
           <li>
             <a class="link" href="./images/hw2/imgtaxi.jpg">
@@ -93,9 +96,10 @@
                 alt="smartphone in the taxi car"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="img-description">Taxi Service</h2>
-            <p class="category">Marketing</p>
+              />
+              <h2 class="img-description">Taxi Service</h2>
+              <p class="category">Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href="./images/hw2/imgscreen-illustrations.jpg">
@@ -104,49 +108,58 @@
                 alt="smartphone and screen illustrations"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="img-description">Screen Illustrations</h2>
-            <p class="category">Design</p>
+              />
+              <h2 class="img-description">Screen Illustrations</h2>
+              <p class="category">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgonline-courses.jpg"
-              alt="women talking on a video conference"
-              width="360"
-              height="300"
-            />
-            <h2 class="img-description">Online Courses</h2>
-            <p class="category">Marketing</p>
+            <a class="link" href="./images/hw2/imgonline-courses.jpg">
+              <img
+                src="./images/hw2/imgonline-courses.jpg"
+                alt="women talking on a video conference"
+                width="360"
+                height="300"
+              />
+              <h2 class="img-description">Online Courses</h2>
+              <p class="category">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/hw2/imginstagram.jpg"
-              alt="instagram stories"
-              width="360"
-              height="300"
-            />
-            <h2 class="img-description">Instagram Stories Concept</h2>
-            <p class="category">Design</p>
+            <a class="link" href="./images/hw2/imginstagram.jpg">
+              <img
+                src="./images/hw2/imginstagram.jpg"
+                alt="instagram stories"
+                width="360"
+                height="300"
+              />
+              <h2 class="img-description">Instagram Stories Concept</h2>
+              <p class="category">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgorganic-food.jpg"
-              alt="women carries mesh of fresh fruits and vegetables"
-              width="360"
-              height="300"
-            />
-            <h2 class="img-description">Organic Food</h2>
-            <p class="category">Web Site</p>
+            <a class="link" href="./images/hw2/imgorganic-food.jpg">
+              <img
+                src="./images/hw2/imgorganic-food.jpg"
+                alt="women carries mesh of fresh fruits and vegetables"
+                width="360"
+                height="300"
+              />
+              <h2 class="img-description">Organic Food</h2>
+              <p class="category">Web Site</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/hw2/imgfres-coffee.jpg"
-              alt="a man makes latte art"
-              width="360"
-              height="300"
-            />
-            <h2 class="img-description">Fresh Coffee</h2>
-            <p class="category">Web Site</p>
+            <a class="link" href="./images/hw2/imgfres-coffee.jpg">
+              <img
+                src="./images/hw2/imgfres-coffee.jpg"
+                alt="a man makes latte art"
+                width="360"
+                height="300"
+              />
+              <h2 class="img-description">Fresh Coffee</h2>
+              <p class="category">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
