update portfolio and background

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body class="body">
     <header>
       <nav>
-        <a class="logo-header" href="./index.html"
+        <a class="logo-header link" href="./index.html"
           >Web<span class="logo-header-st">Studio</span></a
         >
         <ul class="list">
@@ -32,12 +32,14 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a class="contact" href="mailto:info@devstudio.com"
+            <a class="contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -165,7 +167,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
+      <a class="logo-footer link" href="./index.html"
         >Web<span class="logo-footer-st">Studio</span></a
       >
       <p class="footer-text">
