update our team alt

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <li class="employees">
             <img
               src="./images/hw1/img-Mark.jpg"
-              alt="Mark Guerrero Product Designer"
+              alt="a man in a blue shirt, he has black hair and beard"
               width="264"
             />
             <h3 class="name">Mark Guerrero</h3>
@@ -125,7 +125,7 @@
           <li class="employees">
             <img
               src="./images/hw1/img-Tom.jpg"
-              alt="Tom Ford Frontend Developer"
+              alt="a man in a blue shirt, he has brown hair and beard"
               width="264"
             />
             <h3 class="name">Tom Ford</h3>
@@ -134,7 +134,7 @@
           <li class="employees">
             <img
               src="./images/hw1/img-Camila.jpg"
-              alt="Camila Garcia Marketing"
+              alt="a women in a pink sweater, she has long, brown hair and eyes"
               width="264"
             />
             <h3 class="name">Camila Garcia</h3>
@@ -143,7 +143,7 @@
           <li class="employees">
             <img
               src="./images/hw1/img-Daniel.jpg"
-              alt="Daniel Wilson UI Designer"
+              alt="z man in a grey t-shirt, he has dark brown hair and beard"
               width="264"
             />
             <h3 class="name">Daniel Wilson</h3>
